2001-12-17  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-ui-node.c: (bonobo_ui_node_to_string):
	Fix bug where bonobo_ui_node_to_string was returning a string
	that you must free with g_free, not bonobo_ui_node_free_string.

	* bonobo/bonobo-ui-engine.c: (bonobo_ui_engine_xml_get_prop):
	Fix comment that mentions the wrong function to free
	the resulting string.

2001-12-17  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-plug.c: (bonobo_plug_set_property),
	(bonobo_plug_get_property), (bonobo_plug_button_event):
	fix stylistic faux pas.

2001-12-14  Michael Meeks  <michael@ximian.com>

	* Version 1.108.1

2001-12-14  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control.[ch]:
	(bonobo_control_do_popup_full): impl to expose
	other gtk_menu_popup args.
	(bonobo_control_do_popup): use.

2001-12-13  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c
	(bonobo_control_get_popup_ui_container): upd.
	(bonobo_control_destroy): upd.

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_build_control): upd. referencing.

	* tests/test-ui.c: update.

2001-12-13  Michael Meeks  <michael@ximian.com>

	* tests/test-reparent.c (main): destroy the
	window after use.

	* bonobo/bonobo-control.c
	(bonobo_control_class_init): upd.
	(bonobo_control_dispose): rename to
	(bonobo_control_destroy): this.

	* bonobo/bonobo-plug.c (bonobo_plug_class_init): upd.
	(bonobo_plug_unrealize, bonobo_plug_realize): impl,
	upd. take / release ref on realize / unrealize.
	(bonobo_plug_set_control): only hold a g_object ref.

	* tests/control/test-control.c (simple_tests): impl.
	(main): upd.

	* bonobo/bonobo-ui-toolbar-control-item.c
	(bonobo_ui_toolbar_control_item_construct): upd.
	ref counting.

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_set_container): only take a CORBA
	ref on the container.
	(bonobo_ui_component_unset_container): upd.

	* bonobo/bonobo-ui-preferences.c
	(bonobo_ui_preferences_shutdown): impl.

	* bonobo/bonobo-ui-private.h: add.
